--- a/bankofstates/src/home/Home.css
+++ b/bankofstates/src/home/Home.css
@@ -1,5 +1,16 @@
+.home {
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .home__image {
   width: 100%;
+}
+.home__row {
+  display: flex;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: white;
 }
 .service {
   margin-top: 20px;
