Price & About Component;

--- a/bankofstates/src/footer/Footer.css
+++ b/bankofstates/src/footer/Footer.css
@@ -10,3 +10,48 @@
   color: white;
   letter-spacing: 5px;
 }
+
+/*--------------------------------------------------
+    ##Footer
+---------------------------------------------------*/
+.footer-area {
+  background-color: navy;
+  background-position: center;
+  background-size: cover;
+  margin-top: -86px;
+  z-index: 0;
+  padding: 183px 0 57px;
+}
+
+.footer-inner .widget-contact p {
+  margin-bottom: 21px;
+}
+.footer-inner .widget-contact .social-area li a {
+  color: #083996;
+}
+.footer-inner .widget-contact .social-area li a:hover {
+  color: #fff;
+}
+
+.footer-bottom {
+  padding: 29px 0;
+}
+.footer-bottom ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: inline-flex;
+}
+.footer-bottom ul li {
+  font-size: 18px;
+  margin-right: 18px;
+  color: #292929;
+}
+.footer-bottom .copy-right {
+  font-size: 18px;
+  color: #292929;
+}
+
+.footer-inner-2 .widget-contact .social-area li a:hover {
+  background: #ff536d;
+}
