--- a/bankofstates/src/App.css
+++ b/bankofstates/src/App.css
@@ -6,3 +6,62 @@ body {
   /*background-color: rgb(234, 237, 237);*/
   margin: 0;
 }
+
+.pd-100 {
+  padding: 100px 0;
+}
+
+.pdt-50 {
+  padding-top: 50px;
+}
+
+/*********** btn style **************/
+.btn {
+  color: #fff;
+  font-size: 15px;
+  border-radius: 5px;
+  box-shadow: 0px 5px 15px 0px rgba(55, 125, 255, 0.25);
+  height: 30px;
+  line-height: 30px;
+  transition: all 0.3s ease-in;
+  text-align: center;
+}
+.btn.btn-blue {
+  background: #377dff;
+}
+.btn:hover {
+  color: #fff;
+}
+.btn.btn-round {
+  background-color: #377dff;
+  border-radius: 50px;
+}
+.btn:active,
+.btn:focus {
+  outline: 0;
+  box-shadow: none;
+  color: #fff;
+}
+
+.subtitle-thumb {
+  padding-left: 25px;
+}
+.subtitle-thumb:after {
+  content: "";
+  position: absolute;
+  background: #377dff;
+  height: 10px;
+  width: 10px;
+  top: 0;
+  left: 0;
+}
+.subtitle-thumb:before {
+  content: "";
+  position: absolute;
+  background: #083996;
+  height: 10px;
+  width: 10px;
+  top: 5px;
+  left: 5px;
+  z-index: 1;
+}
