--- a/bankofstates/src/footer/Footer.css
+++ b/bankofstates/src/footer/Footer.css
@@ -7,7 +7,7 @@
     ##Footer
 ---------------------------------------------------*/
 .footer-area {
-  background-color: navy;
+  background-color: teal;
   background-position: center;
   background-size: cover;
   margin-top: -86px;
