--- a/bankofstates/src/App.css
+++ b/bankofstates/src/App.css
@@ -15,6 +15,10 @@ body {
   padding-top: 50px;
 }
 
+.p-20 {
+  padding: 20px 20px 20px 20px;
+}
+
 /*********** btn style **************/
 .btn {
   color: #fff;
